--- a/config_1.yaml
+++ b/config_1.yaml
@@ -1,7 +1,7 @@
 # Client and world configuration
 host: localhost
 port: 2000
-world: Town02
+world: Town05
 traffic_manager_port: 8000
 traffic_manager_seed: 0
 timeout: 300.0
@@ -24,26 +24,31 @@ radar_range: 100
 
 # Lidar sensor configuration
 noise_stddev: "0.2"
-channels: "32"
-range: "50"
+channels: "6"
+range: "20"
 rotation_frequency: "10"
-lidar_fov_lower: "-60"
-lidar_fov_upper: "0"
-lidar_pps: "16000"  # points per second, 16000 = 32 channels * 50 points per channel * 10 Hz
+lidar_fov_lower: "-30"
+lidar_fov_upper: "-15"
+lidar_pps: "2000"  # points per second, 2000 = 8 channels * 25 points per channel * 10 Hz
 max_points_stored: 200
-max_points_each_time: 50
+max_points_each_time: 200
+
+
+# Reward config
+collide_penalty: -5
+point_reach_reward: 1
 
 
 # Training configuration
 model_config: "/home/jimmy/Desktop/CARLA_PROJ/Models/config_model.yaml"
 batch_size: 8
-learning_rate: 0.0001
+learning_rate: 0.001
 gamma: 0.98
 memory_size: 1000
 memory_save_freq: 2000
 cache_size: 10
-epsilon: 0.3
-epsilon_min: 0.1
+epsilon: 0.2
+epsilon_min: 0.05
 epsilon_decay: 0.999
 target_model_update_freq: 5000
 env_model_update_freq: 50
@@ -59,7 +64,7 @@ save_dir: "/home/jimmy/Desktop/CARLA_PROJ/Checkpoints"
 display: True
 show_window: False
 show_waypoints: True
-show_lidar: True
+show_lidar: False
 show_xyz: False
 
 # Other
