--- a/config_1.yaml
+++ b/config_1.yaml
@@ -1,7 +1,7 @@
 # Client and world configuration
 host: localhost
 port: 2000
-world: Town05
+world: Town02
 traffic_manager_port: 8000
 traffic_manager_seed: 0
 timeout: 300.0
@@ -47,8 +47,8 @@ gamma: 0.98
 memory_size: 1000
 memory_save_freq: 2000
 cache_size: 10
-epsilon: 0.2
-epsilon_min: 0.05
+epsilon: 0.8
+epsilon_min: 0.1
 epsilon_decay: 0.999
 target_model_update_freq: 5000
 env_model_update_freq: 50
@@ -66,8 +66,9 @@ show_window: False
 show_waypoints: True
 show_lidar: False
 show_xyz: False
+show_local_map: False
 
 # Other
 reach_threshold: 2.5
 device: "cuda"
-n_other_actors: 45
+n_other_actors: 60
