--- a/config_with_mem.yaml
+++ b/config_with_mem.yaml
@@ -1,20 +1,19 @@
 # Training configuration
-model_path: null
+model_path: "Checkpoints/20230731-151124/model_epoch7.pth"
 data_folders:
-  - "/media/jimmy/MyData/Data/carla/20230716-090013"
-  - "/media/jimmy/MyData/Data/carla/20230716-095740"
-  - "/media/jimmy/MyData/Data/carla/20230718-060304"
-  - "/media/jimmy/MyData/Data/carla/20230718-072650"
-  - "/media/jimmy/MyData/Data/carla/20230718-074806"
-  - "/media/jimmy/MyData/Data/carla/20230718-080318"
-batch_size: 128
+  - "/media/jimmy/MyData/Data/carla/20230730-120342"
+  - "/media/jimmy/MyData/Data/carla/20230730-121109"
+  - "/media/jimmy/MyData/Data/carla/20230730-130357"
+  - "/media/jimmy/MyData/Data/carla/20230731-092704"
+  - "/media/jimmy/MyData/Data/carla/20230731-095906"
+  - "/media/jimmy/MyData/Data/carla/20230731-104733"
+batch_size: 256
 learning_rate: 0.001
 gamma: 0.98
-target_model_update_freq: 1000
-moving_average_window: 100
+target_model_update_freq: 500
+moving_average_window: 200
 log_freq: 100
 print_freq: 100
 show_freq: 10
 log_dir: "/home/jimmy/Desktop/CARLA_PROJ/Logs"
-save_freq: 500
 save_dir: "/home/jimmy/Desktop/CARLA_PROJ/Checkpoints"
