New Dairy, New environment, General Code Optimization, Complete more experiment and evaluation stuff.

--- a/config_eval.yaml
+++ b/config_eval.yaml
@@ -1,8 +1,8 @@
 
 test_agent: "A2C"
 agent_config_path: "config_dense_lidar.yaml"
-n_trials: 1
-test_cases_dir: "TestCases"
+n_trials: 2
+test_case_dir: "TestCases/town02_1"
 log_dir: "Logs"
 
 
