--- a/config_practice_1.yaml
+++ b/config_practice_1.yaml
@@ -26,7 +26,7 @@ range: "20"
 rotation_frequency: "20"
 lidar_fov_lower: "-39"
 lidar_fov_upper: "-5"
-lidar_pps: "32000"  # points per second, 12000 = 6 channels * 100 points per channel * 20 Hz
+lidar_pps: "56000"  # points per second, 12000 = 6 channels * 100 points per channel * 20 Hz
 
 
 # Reward config
@@ -35,14 +35,15 @@ point_reach_reward: 2   # fixed reward when reaching a waypoint
 
 # Training configuration
 route_path: null                # This path can be set to route.pkl to use the pre-defined route
-model_path: "Checkpoints/20230803-090259/model_it15000.pth"
+model_path: null
 batch_size: 64
 learning_rate: 0.0001
 gamma: 0.99
-memory_size: 3500               # maximum size of memory list
-memory_save_freq: 3500          # frequency of saving memory list to disk
+memory_size: 5000               # maximum size of memory list
+memory_save_freq: 5000          # frequency of saving memory list to disk
 cache_size: 10                  # env process will keep this much memory records maximumly, records in cache will pass to train process and stored in memory list
-epsilon: 0.05                   # 0.03 - 20 corresponds to around 0.35 epsilon normally
+epsilon: 0.03                   # 0.03 - 20 corresponds to around 0.35 epsilon normally
+greedy_rand_action_prob: 0.5    # If not random action, the probability of choosing the greedy action from greedy agent
 n_repeat_rand_actions: 20       # number of times a random action is applied
 target_model_update_freq: 5000  # frequency of updating target model in A2C algorithm
 env_model_update_freq: 100      # frequency of copying the modle in train process to env process
