--- a/config_dense_lidar.yaml
+++ b/config_dense_lidar.yaml
@@ -1,7 +1,7 @@
 # Client and world configuration
 host: localhost
 port: 2000
-world: Town02
+world: Town05
 traffic_manager_port: 8000
 traffic_manager_seed: 0
 timeout: 300.0
@@ -13,7 +13,7 @@ lidar_height: 3
 noise_stddev: "0.1"
 channels: "32"
 range: "20"
-rotation_frequency: "20"
+rotation_frequency: "6"
 lidar_fov_lower: "-39"
 lidar_fov_upper: "-5"
 lidar_pps: "56000"  # points per second, 12000 = 6 channels * 100 points per channel * 20 Hz
@@ -26,14 +26,14 @@ point_reach_reward: 2   # fixed reward when reaching a waypoint
 
 # Training configuration
 route_path: null                # This path can be set to route.pkl to use the pre-defined route
-model_path: null
+model_path: "Checkpoints/20230809-165419/model_it24000.pth"
 batch_size: 32
 learning_rate: 0.0001
 gamma: 0.99
 memory_size: 5000               # maximum size of memory list
 memory_save_freq: 5000          # frequency of saving memory list to disk
 cache_size: 10                  # env process will keep this much memory records maximumly, records in cache will pass to train process and stored in memory list
-epsilon: 0.02                   # 0.03 - 20 corresponds to around 0.35 epsilon normally
+epsilon: 0.03                   # 0.03 - 20 corresponds to around 0.35 epsilon normally
 greedy_rand_action_prob: 0.25   # If not random action, the probability of choosing the greedy action from greedy agent
 n_repeat_rand_actions: 20       # number of times a random action is applied
 target_model_update_freq: 5000  # frequency of updating target model in A2C algorithm
@@ -43,7 +43,7 @@ print_freq: 100                 # print loss, model output and target action inf
 show_freq: 50                   # display policy space with the input state frequency (training iterations)
 log_freq: 500                   # log frequency (training iterations)
 log_dir: "Logs"                 # where to save log messages
-save_freq: 1000                 # saving frequency (training iterations)
+save_freq: 2000                 # saving frequency (training iterations)
 save_dir: "Checkpoints"         # where to save the model
 
 
