--- a/config_dense_lidar.yaml
+++ b/config_dense_lidar.yaml
@@ -26,24 +26,24 @@ point_reach_reward: 2   # fixed reward when reaching a waypoint
 
 # Training configuration
 route_path: null                # This path can be set to route.pkl to use the pre-defined route
-model_path: "Checkpoints/20230809-165419/model_it24000.pth"
+model_path: "Checkpoints/20230815-125302/model_7000.pth"
 batch_size: 32
-learning_rate: 0.0001
+learning_rate: 0.001
 gamma: 0.99
 memory_size: 5000               # maximum size of memory list
 memory_save_freq: 5000          # frequency of saving memory list to disk
 cache_size: 10                  # env process will keep this much memory records maximumly, records in cache will pass to train process and stored in memory list
 epsilon: 0.03                   # 0.03 - 20 corresponds to around 0.35 epsilon normally
-greedy_rand_action_prob: 0.25   # If not random action, the probability of choosing the greedy action from greedy agent
-n_repeat_rand_actions: 20       # number of times a random action is applied
-target_model_update_freq: 5000  # frequency of updating target model in A2C algorithm
-env_model_update_freq: 100      # frequency of copying the modle in train process to env process
+greedy_rand_action_prob: 0.1   # If not random action, the probability of choosing the greedy action from greedy agent
+n_repeat_rand_actions: 10       # number of times a random action is applied
+target_model_update_freq: 4000  # frequency of updating target model in A2C algorithm
+env_model_update_freq: 100      # frequency of copying the model in train process to env process
 moving_average_window: 100      # the window size for compute moving average of reward and loss
 print_freq: 100                 # print loss, model output and target action information frequency (training iterations)
 show_freq: 50                   # display policy space with the input state frequency (training iterations)
 log_freq: 500                   # log frequency (training iterations)
 log_dir: "Logs"                 # where to save log messages
-save_freq: 2000                 # saving frequency (training iterations)
+save_freq: 1000                 # saving frequency (training iterations)
 save_dir: "Checkpoints"         # where to save the model
 
 
