--- a/config_eval.yaml
+++ b/config_eval.yaml
@@ -1,8 +1,8 @@
 
-test_agent: "A2C"
+test_agent: "Human"
 agent_config_path: "config_dense_lidar.yaml"
 n_trials: 1
-test_case_dir: "TestCases/town01_1"
+test_case_dir: "TestCases/town05_7"
 log_dir: "Logs"
 
 
